[project]
name = "shopping-cart-tests"
version = "1.0.0"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "smoke: ключевые сценарии для быстрого прогона в CI",
]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.coverage.run]
source = ["shopping_cart"]

[tool.coverage.report]
show_missing = true
